--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: My webpage
+date: 2021-17-21
 author: Kevin Viscafe
 email: kevinviscafe@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
